--- a/src/App.css
+++ b/src/App.css
@@ -138,3 +138,29 @@ nav a.nav-link {
 
   }
 } */
+
+/****** About Me *****/
+
+.photo-wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.profile-img {
+  width: 16rem;
+  border-radius: 50%;
+  padding: .3rem;
+  border: 1px solid var(--primary-red)
+}
+
+.about-heading{
+  color: var(--primary-red)
+}
+
+@media(max-width:468px){
+  .profile-img{
+    width: 10rem;
+  }
+}
