--- a/src/App.css
+++ b/src/App.css
@@ -254,3 +254,90 @@ nav a.nav-link {
     max-height: 100%
   }
 } */
+
+/**** Experience ***/
+
+.experience{
+  padding: 0.7rem;
+}
+
+.experience-wrapper {
+  position: relative;
+  padding: 3.125rem 0;
+  overflow: hidden;
+}
+
+.experience h1 {
+  color: var(--primary-red);
+}
+
+.experience-wrapper::before {
+  position: absolute;
+  content: "";
+  top:0;
+  left: 50%;
+  margin-left: -0.0625rem;
+  width: 0.125rem;
+  height: 100%;
+  background: var(--primary-gray);
+  z-index: 1;
+}
+
+.timeline-block{
+  width: calc(50% + 0.5rem);
+  display: flex;
+  justify-content: space-between;
+  clear: both;
+}
+
+.timeline-block-right{
+  float: right;
+  /* direction: rtl; */
+}
+
+.timeline-block-left{
+  float: left;
+  direction: rtl;
+}
+
+.marker{
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  border: 0.3125rem solid var(--primary-red);
+  background: var(--primary-red);
+  margin-top: 0.625rem;
+  z-index: 3;
+}
+
+.timeline-content{
+  width: 95%;
+  padding: 0 0.9375rem;
+  color: #686868;
+  direction: ltr;
+}
+
+.timeline-content h2{
+  color: var(--primary-red);
+}
+
+/***** Media ****/
+@media(max-width:768px){
+.experience .container {
+  padding-left: 0;
+}
+  .experience-wrapper::before{
+    left: 0.5rem;
+    margin-bottom: 1.875rem;
+  }
+  .timeline-block-right{
+    float: none;
+    width: 100%;
+  }
+
+  .timeline-block-left{
+    float: none;
+    direction: ltr;
+    width: 100%;
+  }
+}
